# PythonTemplate

./: .gitignore  .pre-commit-config.yaml  __main__.py  pyproject.toml
.github/workflows/: format_and_lint.yml
src/: logger.py
tests/: test_main.py
